@@ -367,7 +367,7 @@ struct
 fun possibility_tac ctxt =
    (REPEAT 
     (ALLGOALS (simp_tac (ctxt
-      delsimps @{thms used_Cons_simps}
+      |> Simplifier.del_simps @{thms used_Cons_simps}
       |> Simplifier.set_unsafe_solver safe_solver))
      THEN
      REPEAT_FIRST (eq_assume_tac ORELSE' 
