@@ -3,10 +3,9 @@
 Misc legacy stuff -- to be phased out eventually.
 *)
 
-infix 4 addsimps delsimps;
+infix 4 addsimps;
 
 fun ctxt addsimps thms = ctxt |> Simplifier.add_simps thms;
-fun ctxt delsimps thms = ctxt |> Simplifier.del_simps thms;
 
 signature MISC_LEGACY =
 sig
